linear fin-slider,Falta update points|cubic and quadratic board nueva(linear)

--- a/Equidna/Views/Home/Linear.cshtml
+++ b/Equidna/Views/Home/Linear.cshtml
@@ -41,67 +41,81 @@
                     <thead >
                         <tr >
                             <th class="col-xs-2 " >X</th>
-                            <th class="col-xs-8 "></th>
+                            <th class="col-xs-8"></th>
                             <th class="col-xs-2 " >Y</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-xs-2">
-                               0
+                            <td class="col-xs-10">
+                                <input type="number" id="x1" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                           
-                            <td class="col-xs-10">
-                                <input type="number" id="x1" name='x1' step="0.01" class="form-control" style="text-align: center"  />
+                            <td class="col-xs-2">
+                                <h6 id="hx1" style="text-align: left"></h6>
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
-
                             <td class="col-xs-10">
                                 <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
+
+                            <td class="col-xs-2">
+                               0
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
-
                             <td class="col-xs-10">
                                 <input type="number" id="x3" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
+
+                            <td class="col-xs-2">
+                               0
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
-
                             <td class="col-xs-10">
                                 <input type="number" id="x4" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
+
+                            <td class="col-xs-2">
+                               0
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
-
                             <td class="col-xs-10">
                                 <input type="number" id="x5" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
+
+                            <td class="col-xs-2">
+                                0
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
-
                             <td class="col-xs-10">
                                 <input type="number" id="x6" name='x1' step="0.01" class="form-control" style="text-align: center"/>
                             </td>
-                        </tr>
-                        <tr>
-                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-10">
-                                <input type="number" id="x7" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            <td class="col-xs-2">
+                               0
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x7" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
 
+                            <td class="col-xs-2">
+                                0
+                            </td>
+                        </tr>
+                        <tr>
                             <td class="col-xs-10">
                                 <input type="number" id="x8" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
+
+                            <td class="col-xs-2">
+                               0
                             </td>
                         </tr>
                         
@@ -214,7 +228,7 @@
                     <tbody>
                         <tr>
                             <td class="col-xs-2">
-                                0
+                                <h6 id="hy1" style="text-align: left" ></h6>
                             </td>
 
                             <td class="col-xs-10">
@@ -222,52 +236,58 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-2">
+                                <h6 id="hy2" style="text-align: left"></h6>
+                            </td>
 
                             <td class="col-xs-10">
                                 <input type="number" id="y2" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-2">
+                                <h6 id="hy3" style="text-align: left"></h6>
+                            </td>
 
                             <td class="col-xs-10">
                                 <input type="number" id="y3" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-2">
+                                <h6 id="hy4" style="text-align: left"></h6>
+                            </td>
 
                             <td class="col-xs-10">
                                 <input type="number" id="y4" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
-
-                            <td class="col-xs-10">
-                                <input type="number" id="y8" name='x1' step="0.01" class="form-control" style="text-align: center" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-2"><h6 id="hy5" style="text-align: left"></h6></td>
 
                             <td class="col-xs-10">
                                 <input type="number" id="y5" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-2"><h6 id="hy6" style="text-align: left"></h6></td>
 
                             <td class="col-xs-10">
                                 <input type="number" id="y6" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">0</td>
+                            <td class="col-xs-2"><h6 id="hy7" style="text-align: left"></h6></td>
 
                             <td class="col-xs-10">
                                 <input type="number" id="y7" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2"><h6 id="hy8" style="text-align: left"></h6></td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y8" name='x1' step="0.01" class="form-control" style="text-align: center" />
                             </td>
                         </tr>
 
@@ -353,6 +373,16 @@
     var tablay6 = document.getElementById("y6");
     var tablay7 = document.getElementById("y7");
     var tablay8 = document.getElementById("y8");
+    var tablafhy1 = document.getElementById("hx1");
+    var tablafhx1 = document.getElementById("hy1");
+    var tablafhx2 = document.getElementById("hy2");
+    var tablafhx3 = document.getElementById("hy3");
+    var tablafhx4 = document.getElementById("hy4");
+    var tablafhx5 = document.getElementById("hy5");
+    var tablafhx6 = document.getElementById("hy6");
+    var tablafhx7 = document.getElementById("hy7");
+    var tablafhx8 = document.getElementById("hy8");
+    
     var xxx =0;
     var firstUpdate = true;
     var addrow = document.getElementById("add_row");
@@ -432,10 +462,25 @@
         shownavigation: true,
         keepAspectRatio: true,
         showClearTraces: true,
-        keepaspectratio:false });
+        keepaspectratio: false, zoom: {
+            factorX: 1.25,
+            factorY: 1.25,
+            wheel: true,
+            needshift: true,
+            eps: 0.1
+        }
+    });
   
 
-    var velocityBoard = JXG.JSXGraph.initBoard('VelocityBoard', { boundingbox: [-2, 9, 9, -2], axis: true, grid: true, shownavigation: true, keepAspectRatio: true, showClearTraces: true, keepaspectratio :false});
+    var velocityBoard = JXG.JSXGraph.initBoard('VelocityBoard', {
+        boundingbox: [-2, 9, 9, -2], axis: true, grid: true, shownavigation: true, keepAspectRatio: true, showClearTraces: true, keepaspectratio: false, zoom: {
+            factorX: 1.25,
+            factorY: 1.25,
+            wheel: true,
+            needshift: true,
+            eps: 0.1
+        }
+    });
     
 
 
@@ -489,19 +534,19 @@
     );
 
     function updateFunction() {
+       
 
         velocityFunction.a = constantPoint.Y();
         positionFunction = velocityFunction.integrate(linearPoint.Y());
 
         positionBoard.removeObject(pintarPuntos);
         positionBoard.removeObject(pintarotrosPuntos);
+      
         //velocityBoard.removeObject(pintarPuntos);
         //velocityBoard.removeObject(pintarotrosPuntos);
         //form
 
-        updateform();
-        //form2
-        updateform2();
+        
         //input
         updatenumerfield();
         //table
@@ -510,6 +555,12 @@
         updateformhtml();
         //positionBoard.update();
         //velocityBoard.update();
+        updateform2();
+        updateform();
+        //form2
+       
+        checar();
+        positionBoard.update();
     }
     
    
@@ -528,29 +579,124 @@
         numtable2.value = Math.round(numtable2.value * 100) / 100;
     }*/
     function updateform(parameters) {
-        var  otronum =0.00;
-        otronum = parseFloat(numberField.value) + parseFloat(numberField2.value * tablax1.value);
-        pintarPuntos = positionBoard.create('point', [tablax1.value, otronum], { size: 2, name: "", color: "Red", trace: true });
-    
-        //velocityBoard.addChild(positionBoard);
+
+        if (tablay1.value.length == 0) {
+            tablafhy1.innerHTML = "0";
+            check = false;
+        } else {
+            var otronum = 0.00;
+            otronum = parseFloat(numberField.value) + parseFloat(numberField2.value * tablax1.value);
+            tablafhy1.innerHTML = otronum.toString();
+            pintarPuntos = positionBoard.create('point', [tablax1.value, otronum], { size: 2, name: "", color: "Red", trace: true });
+            check = true;
+            //velocityBoard.addChild(positionBoard);
+
+        }
+
+       
 
     }
     function updateform2(parameters) {
 
-        var otro2 = 0.00;
-        otro2 = ((parseFloat(tablay1.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
-        pintarotrosPuntos = positionBoard.create('point', [otro2, tablay1.value], { size: 2, name: "", color: "Red", trace: true });
-        //velocityBoard.addChild(positionBoard);
+        if (tablay1.value.length==0) {
+            tablafhx1.innerHTML = "0";
+            check = false;
+        } else {
+            var otro2 = 0;
+            otro2 = ((parseFloat(tablay1.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx1.innerHTML = otro2.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro2, tablay1.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay2.value.length == 0) {
+            tablafhx2.innerHTML = "0";
+            check = false;
+        } else {
+            var otro3 = 0;
+            otro3 = ((parseFloat(tablay2.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx2.innerHTML = otro3.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro3, tablay2.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay3.value.length == 0) {
+            tablafhx3.innerHTML = "0";
+            check = false;
+        } else {
+            var otro4 = 0;
+            otro4 = ((parseFloat(tablay3.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx3.innerHTML = otro4.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro4, tablay3.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay4.value.length == 0) {
+            tablafhx4.innerHTML = "0";
+            check = false;
+        } else {
+            var otro5 = 0;
+            otro5 = ((parseFloat(tablay4.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx4.innerHTML = otro5.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro5, tablay4.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay5.value.length == 0) {
+            tablafhx5.innerHTML = "0";
+            check = false;
+        } else {
+            var otro6 = 0;
+            otro6 = ((parseFloat(tablay5.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx5.innerHTML = otro6.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro6, tablay5.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay6.value.length == 0) {
+            tablafhx6.innerHTML = "0";
+            check = false;
+        } else {
+            var otro7 = 0;
+            otro7 = ((parseFloat(tablay6.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx6.innerHTML = otro7.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro7, tablay6.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay7.value.length == 0) {
+            tablafhx7.innerHTML = "0";
+            check = false;
+        } else {
+            var otro8 = 0;
+            otro8 = ((parseFloat(tablay7.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx7.innerHTML = otro8.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro8, tablay7.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+        if (tablay8.value.length == 0) {
+            tablafhx8.innerHTML = "0";
+            check = false;
+        } else {
+            var otro9 = 0;
+            otro9= ((parseFloat(tablay8.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+            tablafhx8.innerHTML = otro9.toString();
+            pintarotrosPuntos = positionBoard.create('point', [otro9, tablay8.value], { size: 2, name: "", color: "Red", trace: true });
+            //velocityBoard.addChild(positionBoard);
+            check = true;
+        }
+       
 
     }
 
     function checar(parameters) {
+
+        if (check) {
+            pintarPuntos.setAttribute({ visible: false });
+            pintarotrosPuntos.setAttribute({ visible: false });
+        }
         // board.clearTraces(pintarPuntos);
-        
-       
-        pintarPuntos.setAttribute({ visible: false });
-        pintarotrosPuntos.setAttribute({ visible: false });
-      
 
         // tablax1.value = " ";
         //tablay1.value = " ";
@@ -562,10 +708,14 @@
         Formulavelo.innerHTML = "X:0    Y:" + numberField2.value;
         Formulapos.innerHTML = "X:0     Y:" + numberField.value;
     }
-   
+    updateFunction();
     positionBoard.on('update', updateFunction);
     velocityBoard.on('update', updateFunction);
-    positionBoard.on('update', checar);
-    velocityBoard.on('update', checar);
-    updateFunction();
+   // positionBoard.on('update', checar);
+    //velocityBoard.on('update', checar);
+   // linearPoint.on('update', updateFunction);
+    //constantPoint.on('update', updateFunction);
+   // linearPoint.on('drag', updateFunction);
+    //constantPoint.on('drag', updateFunction);
+  
 </script>
